DES-23 Add `markers` prop to lists, correct whitespace, add documentation (#444)
* Setup for unstyled property

* NoMarker rename and docs

* Update packages/css/src/unordered-list/unordered-list.scss


* Update storybook/storybook-css/src/components/UnorderedList/UnorderedList.docs.mdx


* ul reset

* Remove temp ignore

* Use plural for markers as it’s a prop for the whole list

* Update documentation

* Move obsolete example and stylesheet

* Apply correct marker and whitespace to unordered list

* Apply explicit marker and correct whitespace to ordered list

* Use Dutch story names as they get rendered in the table of contents

* Prevent double negative in markers prop

* Fix a line in the documentation


* Improve a line in the documentation


* Style class names, not elements, and add direct child selector

* Reinstate a minimal separate documentation file

* Clarify documentation on typografy of marker-less lists

* Finetune and document the use of margin and padding for indentation

* Remove unnecessary child combinators

* Indent list items for mixed lists

* Shorten comments

---------

--- a/storybook/storybook-docs/src/stories.scss
+++ b/storybook/storybook-docs/src/stories.scss
@@ -13,3 +13,12 @@
   padding-block: 2rem;
   text-align: center;
 }
+
+.amsterdam-docs-card {
+  border: 1px dotted black;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  padding: 0.5rem; /* stylelint-disable-line */
+  width: 50%;
+}
